# yolov5-ros

./: .coveragerc  .gitlab-ci.yml  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  requirements_test.txt  setup.cfg  setup.py
.gitlab/ci/: build.gitlab-ci.yml  deploy.gitlab-ci.yml  lint.gitlab-ci.yml  template.gitlab-ci.yml  test.gitlab-ci.yml
.tools/: test-linter.sh
tests/: conftest.py
tests/scripts/: _manuals.py  test_action.py  test_pub_sub.py  test_service.py
yolov5_ros/: CMakeLists.txt  package.xml
yolov5_ros/config/: yolov5m_Object365.yaml
yolov5_ros/config/rviz/: layout.rviz
yolov5_ros/launch/: yolov5.launch  yolov5_objects365.launch
yolov5_ros/scripts/: yolov5_node.py
yolov5_ros/scripts/submodules/: yolov5
yolov5_ros/weights/: .gitignore  download.sh
yolov5_ros_msg/: CMakeLists.txt  package.xml
yolov5_ros_msg/action/: Detection.action
yolov5_ros_msg/msg/: BoundingBox.msg  BoundingBoxes.msg
yolov5_ros_msg/srv/: Detection.srv
