cmake_minimum_required(VERSION 3.0.2)
project(yolov5_ros_msgs)

# ----------------------------------------------------------------------------------------------------------------------
#
#   Find catkin macros and libraries
#
# ----------------------------------------------------------------------------------------------------------------------
find_package(catkin REQUIRED
  COMPONENTS
    std_msgs
    sensor_msgs
    message_generation
    actionlib_msgs
)

# ----------------------------------------------------------------------------------------------------------------------
#
#   Generate messages in the 'msg' folder
#
# ----------------------------------------------------------------------------------------------------------------------
add_message_files(
  FILES
  BoundingBox.msg
  BoundingBoxes.msg
)

# ----------------------------------------------------------------------------------------------------------------------
#
#   Generate services in the 'srv' folder
#
# ----------------------------------------------------------------------------------------------------------------------
add_service_files(
  FILES
  Detection.srv
)

# ----------------------------------------------------------------------------------------------------------------------
#
#   Generate actions in the 'action' folder
#
# ----------------------------------------------------------------------------------------------------------------------
add_action_files(
  FILES
  Detection.action
)

# ----------------------------------------------------------------------------------------------------------------------
#
#   Generate added messages and services with any dependencies listed here
#
# ----------------------------------------------------------------------------------------------------------------------
generate_messages(
  DEPENDENCIES
  std_msgs
  sensor_msgs
  actionlib_msgs
)

# ----------------------------------------------------------------------------------------------------------------------
#
#   catkin specific configuration
#
# ----------------------------------------------------------------------------------------------------------------------
catkin_package(
  CATKIN_DEPENDS message_runtime
)
