<?xml version="1.0"?>
<package format="2">
  <name>yolov5_ros_msgs</name>
  <version>0.0.0</version>
  <description>The yolov5_ros_msgs package</description>

  <maintainer email="todo@todo.todo">todo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
